[package]
name = "deterministic-rsa"
version = "0.1.0"
authors = ["Andre Vallestero"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand_chacha = { version="0.3.0", default-features=false }
rsa = { version="0.4.0", default-features=false, features = [ "alloc" ] }

[profile.release]
opt-level = 3
#opt-level = "z"